arrumei os logos das redes sociais no fale conosco. Coloquei a fonte como bold

--- a/style-faleconosco.css
+++ b/style-faleconosco.css
@@ -32,7 +32,29 @@
     height: 15vh;
 }
 
-.tamanho-logos{
-    max-width: 2%;
-    background-color: #f2e0d6;
+.tamanho-logo-face{
+    width: 2%;
+}
+
+.tamanho-logo-insta{
+    width: 1.8%;
+}
+
+.tamanho-logo-twitter{
+    width: 2.1%;
+}
+
+.tamanho-logo-whats{
+    width: 2%;
+}
+
+.formata-logos{
+    text-align: center;
+    color: #420217;
+    font-size: 1em;
+    font-family: 'Merriweather', serif;
+}
+
+h4{
+    padding-bottom: 1.7vh;
 }
