--- a/style-index.css
+++ b/style-index.css
@@ -9,6 +9,7 @@ header {
     justify-content: space-around;
     height: 23vh;
     color: #420217;
+    font-size: large;
 }
 
 .formata-imagem-header{
