--- a/style-faleconosco.css
+++ b/style-faleconosco.css
@@ -1,4 +1,4 @@
-.contato{
+.contato {
     margin-top: 3vh;
     display: flex;
     flex-direction: column;
@@ -10,16 +10,16 @@
     background-color: #f2e0d6;
 }
 
-.formata-input{
+.formata-input {
     font-size: 1em;
     color: #420217;
     width: 30%;
-	height: 5vh;
-	border-radius: 10px;
+    height: 5vh;
+    border-radius: 10px;
     border-color: #e4a579;
 }
 
-.botao-submit{
+.botao-submit {
     height: 4vh;
     width: 5vw;
     font-size: 0.8em;
@@ -28,63 +28,64 @@
     cursor: pointer;
 }
 
-#caixa-mensagem{
+#caixa-mensagem {
     height: 15vh;
 }
 
-.tamanho-logos{
+.tamanho-logos {
     max-width: 2%;
     background-color: #f2e0d6;
 }
 
 footer {
     color: #420217;
-    background-color: white; 
-    height: 18vh;
-    /* width: 100vw; */
+    background-color: white;
+    height: 13vh;
     padding: 0px 20px;
     bottom: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    
+
 }
 
 
 .tamanho-img-pagamento {
-    max-width: 40%;
+    max-width: 38%;
     background-color: white;
-    
+
 }
 
 
 
-.tamanho-logos{
-    max-width: 4%;
+.tamanho-logos-footer {
+    max-width: 3.5%;
     background-color: #f2e0d6;
-   
+
 }
 
 
 .footer-left {
     text-align: justify;
-    
+
 }
 
 .footer-right {
     text-align: right;
-    
-    
+
+
 }
 
 .text-left {
     
-    font-size: 1.3em;
     font-family: 'Merriweather', serif;
+    font-size: 1.3em;
+    padding-bottom: 2vh;
 
 }
 
 .text-right {
-    font-size: 1.3em;
     font-family: 'Merriweather', serif;
+    font-size: 1.3em;
+    padding-bottom: 1vh;
 }
