adicionei o que Mari fez e vi conflitos

--- a/style-faleconosco.css
+++ b/style-faleconosco.css
@@ -89,7 +89,8 @@ footer {
     font-family: 'Merriweather', serif;
     font-size: 1.3em;
     padding-bottom: 1vh;
-=======
+}
+
 .tamanho-logo-face{
     width: 2%;
 }
