--- a/style-babidas.css
+++ b/style-babidas.css
@@ -1,18 +1,28 @@
 main img{
-    height: 27vh;
-    width: 28vw;
-} 
+    height: 30vh;
+    width: 20vw;
+}
+
 .container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     row-gap: 10px;
-    overflow: scroll;
     justify-items: center;
     align-items: center;
     padding-top: 5vh;
     font-family: 'Merriweather', serif;
     color: #420217;
     text-align: center;
-    font-size: 0.8em
+    font-size: 1.5em
+}
+.tam-refrigerante{
+    height: 27vh;
+    width: 20vw;
+
+}
+
+.tam-suco{
+    height: 19vh;
+    width: 28vw;
 }
