--- a/style-padaria.css
+++ b/style-padaria.css
@@ -2,3 +2,16 @@ main img{
     height: 27vh;
     width: 28vw;
 }
+.container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    row-gap: 10px;
+    justify-items: center;
+    align-items: center;
+    padding-top: 5vh;
+    font-family: 'Merriweather', serif;
+    color: #420217;
+    text-align: center;
+    font-size: 1em
+}
