--- a/style-babidas.css
+++ b/style-babidas.css
@@ -3,19 +3,14 @@ main img{
     width: 20vw;
 }
 
-.container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    row-gap: 10px;
-    justify-items: center;
-    align-items: center;
-    padding-top: 5vh;
-    font-family: 'Merriweather', serif;
-    color: #420217;
+.container-kits {
+    display: flex;
+    flex-direction: column;
+    padding-top: 2vh;
     text-align: center;
-    font-size: 1.5em
+    font-size: 1.2em;
 }
+
 .tam-refrigerante{
     height: 27vh;
     width: 20vw;
@@ -25,4 +20,13 @@ main img{
 .tam-suco{
     height: 19vh;
     width: 28vw;
+}
+.imagem-compra{
+    width: 5vw;
+    height: 8vh;
+}
+
+.tamanho-botao{
+    width: 8%;
+    height: 8%;
 }
