--- a/style-hortifruti.css
+++ b/style-hortifruti.css
@@ -2,16 +2,20 @@ main img{
     height: 27vh;
     width: 28vw;
 }
-.container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    row-gap: 10px;
-    justify-items: center;
-    align-items: center;
-    padding-top: 5vh;
-    font-family: 'Merriweather', serif;
-    color: #420217;
+.container-kits {
+    display: flex;
+    flex-direction: column;
+    padding-top: 2vh;
     text-align: center;
-    font-size: 1.5em
+    font-size: 1.2em;
+}
+
+.imagem-compra{
+    width: 5vw;
+    height: 8vh;
+}
+
+.tamanho-botao{
+    width: 8%;
+    height: 8%;
 }
