--- a/style-nossotime.css
+++ b/style-nossotime.css
@@ -1,13 +1,20 @@
 
+* {
+    margin: 0;
+    padding: 0;
+}
+
+
+
 .formata-imagens {
-    padding-top: 1vh;
+    padding-top: 2.5vh;
     text-align: center;
     display: flex;
     max-height: 60%;
     max-width: 100%;
     justify-content: space-around;
     row-gap: 5%;
-    padding-bottom: 3vh;
+    padding-bottom: 9.8vh;
     
 }
 
